--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>MealMatch • Simple demo app • {{ now() if false else '' }}</small>
+      <small>• MealMatch • Group 07 • BSIT 2107 • {{ now() if false else '' }}</small>
     </div>
   </footer>
 </body>
