--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -23,10 +23,15 @@
             {% endif %}
           </td>
           <td>
+            <a href="{{ url_for('view_recipe', id=r['id']) }}">View</a>
             <a href="{{ url_for('edit_recipe', id=r['id']) }}">Edit</a>
             <form method="post" action="{{ url_for('delete_recipe', id=r['id']) }}" style="display:inline;">
               <button type="submit" class="linklike">Delete</button>
             </form>
+            <br>
+            <!-- export links -->
+            <a href="{{ url_for('export_recipe', id=r['id'], fmt='json') }}">Export JSON</a> |
+            <a href="{{ url_for('export_recipe', id=r['id'], fmt='csv') }}">Export CSV</a>
           </td>
         </tr>
       {% endfor %}
