--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,38 +3,67 @@
 {% block content %}
   <h2>Recipes (visible to all)</h2>
   <p><a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a></p>
+  
   {% if recipes %}
     <table class="list">
-      <thead><tr><th>Title</th><th>Creator</th><th>Ingredients</th><th>Actions</th></tr></thead>
-      <tbody>
-      {% for r in recipes %}
+      <thead>
         <tr>
-          <td>{{ r['title'] }}</td>
-          <td>{{ r['creator'] or 'Community' }}</td>
-          <td>
-            {% if recipe_ingredients.get(r['id']) %}
-              <ul>
-              {% for ri in recipe_ingredients[r['id']] %}
-                <li>{{ ri['ingredient_name'] }} ({{ ri['required_quantity'] }} {{ ri['unit'] }})</li>
-              {% endfor %}
-              </ul>
-            {% else %}
-              -
-            {% endif %}
-          </td>
-          <td>
-            <a href="{{ url_for('view_recipe', id=r['id']) }}">View</a>
-            <a href="{{ url_for('edit_recipe', id=r['id']) }}">Edit</a>
-            <form method="post" action="{{ url_for('delete_recipe', id=r['id']) }}" style="display:inline;">
-              <button type="submit" class="linklike">Delete</button>
-            </form>
-            <br>
-            <!-- export links -->
-            <a href="{{ url_for('export_recipe', id=r['id'], fmt='json') }}">Export JSON</a> |
-            <a href="{{ url_for('export_recipe', id=r['id'], fmt='csv') }}">Export CSV</a>
-          </td>
+          <th>Title</th>
+          <th>Creator</th>
+          <th>Ingredients</th>
+          <th>Actions</th>
         </tr>
-      {% endfor %}
+      </thead>
+      <tbody>
+        {% for r in recipes %}
+          <tr>
+            <td>{{ r['title'] }}</td>
+            <td>{{ r['creator'] or 'Community' }}</td>
+            <td>
+              {% if recipe_ingredients.get(r['id']) %}
+                <ul style="margin: 0; padding-left: 15px;">
+                  {% for ri in recipe_ingredients[r['id']] %}
+                    <li>{{ ri['ingredient_name'] }} ({{ ri['required_quantity'] }} {{ ri['unit'] }})</li>
+                  {% endfor %}
+                </ul>
+              {% else %}
+                -
+              {% endif %}
+            </td>
+            <td>
+              <!-- View -->
+              <a href="{{ url_for('view_recipe', id=r['id']) }}" title="View Recipe">
+                <img src="{{ url_for('static', filename='image/view.png') }}" 
+                     style="width:20px; height:20px; margin:0 5px; vertical-align:middle;">
+              </a>
+              
+              <!-- Edit Icon -->
+              <a href="{{ url_for('edit_recipe', id=r['id']) }}" title="Edit Recipe">
+                <img src="{{ url_for('static', filename='image/pencil-square.png') }}" 
+                     style="width:20px; height:20px; margin:0 5px; vertical-align:middle;">
+              </a>
+                        
+              <!-- Delete Icon -->
+              <form method="post" 
+                    action="{{ url_for('delete_recipe', id=r['id']) }}" 
+                    style="display:inline;"
+                    onsubmit="return confirm('Are you sure you want to delete this recipe?');">
+                <button type="submit" 
+                        style="background:none; border:none; padding:0; cursor:pointer;"
+                        title="Delete Recipe">
+                  <img src="{{ url_for('static', filename='image/trash.png') }}" 
+                       style="width:20px; height:20px; vertical-align:middle;">
+                </button>
+              </form>
+              
+              <br>
+              
+              <!-- Export links (text) -->
+              <a href="{{ url_for('export_recipe', id=r['id'], fmt='json') }}">Export JSON</a> |
+              <a href="{{ url_for('export_recipe', id=r['id'], fmt='csv') }}">Export CSV</a>
+            </td>
+          </tr>
+        {% endfor %}
       </tbody>
     </table>
   {% else %}
